<resources>
    <string name="app_name">Book Share</string>
    <string name="remember_me">Remember Me</string>
    <string name="book_share">Book Share</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_or_username">Email or Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="or">OR</string>
    <string name="id">Id</string>
    <string name="prices">Prices</string>
    <string name="rating">Rating</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="detail">Detail</string>
    <string name="download_url">Download URL</string>
    <string name="author">Author</string>
    <string name="product">Product</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact">Contact</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="next">Next</string>tvSecondDescription
    <string name="tv_first_description">Reading is a conversation. All books talk. But a good book listens as well.</string>
    <string name="tv_second_description">Read the best book first, or you may not have a chance to read them at all.</string>
    <string name="tv_third_description">The only thing you absolutely have to know is the location of the library.</string>
    <string name="find_your_favorite_book">FIND YOUR FAVORITE BOOK</string>
    <string name="relevant">RELEVANT</string>
    <string name="java_programming">Java Programming</string>
    <string name="buy">Buy</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="hi_i_am_a_book_writer_and_i_love_book_reading_it_s_my_greatest_passion_in_life">Hi, I am a book writer and I love Book reading! It\'s my greatest passion in life.</string>
    <string name="writers_amp_authors"><![CDATA[Writers & Authors]]></string>
    <string name="sitaram_tamang">Sitaram Tamang</string>
    <string name="photos">PHOTOS</string>
    <string name="_77k">77k</string>
    <string name="followers">FOLLOWERS</string>
    <string name="_62k">62k</string>
    <string name="following">FOLLOWING</string>
    <string name="_105">105</string>
    <string name="natures">Natures</string>
    <string name="_31_photos">31 photos</string>
    <string name="my_arts">My Arts</string>
    <string name="my_book">My Books</string>
    <string name="_36_photos">36 photos</string>
    <string name="_11_photos">11 photos</string>
    <string name="animals">Animals</string>
    <string name="_22_photos">22 photos</string>
    <string name="my_collections">My Collections</string>
    <string name="social_media">Social media</string>
    <string name="instragram">Instragram</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="personal_details">Personal Details</string>
    <string name="kathmandu">Kathmandu</string>
    <string name="manoj12_gmail_com">manoj12@gmail.com</string>
    <string name="email_address">Email Address:</string>
    <string name="address">Address:</string>
    <string name="_9801022172">9801022172</string>
    <string name="contact_no">Contact No:</string>
    <string name="features">Features</string>
    <string name="welcome_to_our_app">Welcome to our app!</string>
    <string name="book_share_app_can_be_a_book_designed_and_researched_to_provide_for_book_lovers_where_this_app_offers_various_books_across_various_genres_including_fiction_non_fiction_romance_thriller_science_fiction_and_more">Book Share app can be a book designed and researched to provide for book lovers where this app offers various books across various genres, including fiction, non-fiction, romance, thriller, science-fiction, and more.</string>
    <string name="you_can_browse_and_purchase_books_directly_from_the_app_and_read_reviews_see_ratings_and_connect_with_other_readers_to_discuss_your_favourite_titles_you_can_join_book_clubs_and_participate_in_reading_challenges_to_stay_motivated_and_engaged">You can browse and purchase books directly from the app and read reviews, see ratings, and connect with other readers to discuss your favourite titles. You can join book clubs and participate in reading challenges to stay motivated and engaged.</string>
    <string name="join_our_community_of_book_lovers_today_and_start_exploring_the_wonderful_world_of_literature">Join our community of book lovers today and start exploring the wonderful world of literature!</string>
    <string name="_1_user_friendly_interface">1. User-Friendly Interface</string>
    <string name="_2_vast_selection_of_books">2. Vast Selection of Books</string>
    <string name="_3_advanced_search_options">3. Advanced Search Options</string>
    <string name="_4_purchasing_options">4. Purchasing Options</string>
    <string name="_5_more">5. More...</string>
    <string name="www_book_share_app_com">www.book.share.app.com</string>
    <string name="_25_march_2023">25 March 2023</string>
    <string name="use_bookstore_and_get_discount">USE \'BOOKSTORE\' AND GET DISCOUNT</string>
    <string name="_50">50%</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
    <string name="send">Send</string>
    <string name="contact_us">Contact Us</string>
    <string name="call">Call</string>
    <string name="contact_number">Contact number</string>
    <string name="search">Search</string>
    <string name="about_book_share">About Book Share</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="np01ma4s220003_islingtoncollege_edu_np">np01ma4s220003@islingtoncollege.edu.np</string>
    <string name="send_feedback">Send feedback</string>
    <string name="outbox">Outbox</string>
    <string name="inbox">Inbox</string>
    <string name="edit_profile">Edit profile</string>
    <string name="receive_notification">Receive notification</string>
    <string name="receive_new_letters">Receive new letters</string>
    <string name="receive_special_offer">Receive special offer</string>
    <string name="receive_update">Receive Update</string>
    <string name="log_out">Log out</string>
    <string name="for_you">For you</string>
    <string name="top_list">Top List</string>
    <string name="favorite">Favorite</string>
    <string name="favourite">Favourite</string>
    <string name="trending">Trending</string>
    <string name="description">Description</string>
    <string name="rs_200">Rs.200</string>
    <string name="the_book_written">The Book Written</string>
    <string name="buy_now">Buy Now</string>

    <string name="notification">This is the notification</string>
</resources>