<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navGallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/navOutBox"
            android:icon="@drawable/ic_menu_send_outbox"
            android:title="@string/outbox" />
        <item
            android:id="@+id/navSlideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/navFeedback"
            android:icon="@drawable/ic_menu_feedback"
            android:title="@string/send_feedback" />
        <item
            android:id="@+id/navSetting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/navHelp"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/action_settings" />
    </group>
</menu>