<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sitaram.bookshare.features.about.AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UselessLeaf">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:orientation="vertical"
                android:background="@mipmap/img_about_page_background"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/btnAboutToHome"
                    android:layout_width="55dp"
                    android:layout_height="35dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/arrow_back_sharp_icon"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textColor="#FF5722"
                    android:layout_marginTop="120dp"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:text="@string/about_book_share"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="#5D7F9A">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="15dp"
                    android:text="@string/welcome_to_our_app"
                    android:textColor="@color/textOrange"
                    android:textSize="25sp"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/book_share_app_can_be_a_book_designed_and_researched_to_provide_for_book_lovers_where_this_app_offers_various_books_across_various_genres_including_fiction_non_fiction_romance_thriller_science_fiction_and_more"
                    android:justificationMode="inter_word"
                    tools:targetApi="o"
                    tools:ignore="VisualLintLongText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:textColor="#FFFFFF"
                    android:text="@string/you_can_browse_and_purchase_books_directly_from_the_app_and_read_reviews_see_ratings_and_connect_with_other_readers_to_discuss_your_favourite_titles_you_can_join_book_clubs_and_participate_in_reading_challenges_to_stay_motivated_and_engaged"
                    android:justificationMode="inter_word"
                    tools:targetApi="o"
                    tools:ignore="VisualLintLongText" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/join_our_community_of_book_lovers_today_and_start_exploring_the_wonderful_world_of_literature"
                    android:justificationMode="inter_word"
                    tools:targetApi="o" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:padding="5dp"
                    android:textSize="25sp"
                    android:textColor="@color/white"
                    android:text="@string/features" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/_1_user_friendly_interface" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/_2_vast_selection_of_books" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/_3_advanced_search_options" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/_4_purchasing_options" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:padding="5dp"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:text="@string/_5_more" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#5D7F9A">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@mipmap/book_app_logo"
                    android:contentDescription="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/book_share"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/www_book_share_app_com"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:paddingBottom="20dp"
                    android:textStyle="bold"
                    android:text="@string/_25_march_2023"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>